<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_item"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_height="130dp"
            android:contentDescription="@string/poster"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_poster"
            android:layout_marginTop="25dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/test_title"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_poster"
            android:layout_below="@id/tv_title"
            android:paddingTop="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:layout_marginEnd="12dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/test_overview"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>